fixed homepage text, chinese hover, magnifying glass hover and header flickering

--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ h6, .h6 {
   
 }
 
-.search-container #input-area, .band:hover .search-container #input-area, .band.active .search-container #input-area {
+.search-container #input-area, .band:hover .search #input-area, .band.active .search #input-area {
   outline: 0;
   background: transparent;
   transform: scaleX(0);
@@ -202,7 +202,7 @@ h6, .h6 {
 }*/
 
 
-.search-container:hover #input-area, .band:hover .search-container:hover #input-area, .band.active .search-container:hover #input-area {
+.search:hover ~ #input-area {
   /*border: 0;*/
   width: 90%;
   outline: 0;
@@ -234,7 +234,7 @@ h6, .h6 {
 
 
 
-.band:hover .search-container:hover .search, .band.active .search-container:hover .search {
+.band:hover .search:hover, .band.active .search:hover {
   background: url("http://localhost:8888/wordpress/wp-content/uploads/2018/05/LaguardaLow_SearchRed.png") no-repeat center;
   background-size: 100%; 
 }
@@ -326,6 +326,7 @@ h6, .h6 {
   color: #ffffff;
   font-size: 10.5px;
   font-weight: bold;
+  cursor: pointer;
 }
 
 .lang-toggle #lang-zh {
@@ -335,6 +336,11 @@ h6, .h6 {
   color: #C0C0C0;
   font-size: 10.5px;
   font-weight: bold;
+}
+
+#lang-zh:hover {
+  color: #ED2939;
+  cursor: pointer;
 }
 
 .band:hover ul li a, .band:hover .lang-toggle p, .band.active ul li a, .band.active .lang-toggle p {
